# toiler

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
Toiler/: asgi.py  urls.py  wsgi.py
Toiler/settings/: __init__.py  base.py  development.py  production.py
chat/: consumers.py  middlewares.py  urls.py
docs/: proj_erd.drawio
gantt/: admin.py  apps.py  forms.py  models.py  notifier.py  permissons.py  serializers.py  signals.py  urls.py  views.py
gantt/migrations/: 0001_initial.py  0002_initial.py
gantt/tests/: base.py  factories.py  test_restfull.py
gantt/tests/test_api/: test_activity.py  test_assigned.py  test_bench.py  test_comment.py  test_project.py  test_role.py  test_signals.py  test_state.py  test_task.py  test_team.py  test_team_member.py
gantt/tests/test_serializers/: test_serializers.py
static/: 500.html  mainlogin.css
static/assets/landing/: landing.min.css
static/assets/scripts/: loginjs.js  tilt.js  toiler-website.js
templates/: gant_invitation.html  index.html  login.html  password_reset_done.html  register.html  reset.html  reset_done.html  reset_pass_email_subject.txt  reset_password.html  valid_email_sent.html  validation_done.html
templates/email/: hello_test.html  registration_confirmation_email.html  reset_pass_email.html
user/: admin.py  apps.py  authentication.py  forms.py  img_util.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/templatetags/: mini_filter.py
