[project]
name = "Toiler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Amir Shams", email = "amir3.ash@gmail.com"},
]
dependencies = [
    "boto3>=1.24.26",
    "channels>=3.0.5",
    "chardet>=4.0.0",
    "daphne>=3.0.2",
    "Django>=4.1",
    "django-cte>=1.2.1",
    "django-debug-toolbar>=3.2.4",
    "django-filter>=22.1",
    "django-rest-knox>=4.1.0",
    "django-reversion>=5.0.1",
    "django-storages>=1.12.3",
    "djangorestframework>=3.13.1",
    "djangorestframework-camel-case>=1.3.0",
    "djangorestframework-simplejwt>=5.2.2",
    "drf-yasg>=1.21.3",
    "gunicorn>=20.1.0",
    "mysqlclient>=2.1.1",
    "Pillow>=9.2.0",
    "PyJWT>=2.6.0",
    "python-dotenv>=0.19.2",
    "redis>=4.4.2",
    "requests>=2.31.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
